[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Enemies/Mushroom/Idle (32x32).png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Mushroom/Hit.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Mushroom/Run (32x32).png" type="Texture" id=3]
[ext_resource path="res://Characters/BaseCharacter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Mushrun.gd" type="Script" id=5]
[ext_resource path="res://Boxes/HitBox.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=2]
resource_name = "Hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 50, 15 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 9.0
height = 6.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14, 6 )

[node name="Mushrun" instance=ExtResource( 4 )]
collision_layer = 4
collision_mask = 1
script = ExtResource( 5 )
MAX_SPEED = 40
ACCELERATION = 500
JUMP_FORCE = 120
FRICTION = 0.1

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )
flip_h = true
hframes = 5
frame = 4

[node name="AnimationPlayer" parent="." index="1"]
anims/Hit = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="Collider" parent="." index="2"]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="IdleTimer" type="Timer" parent="." index="3"]
wait_time = 3.0
one_shot = true

[node name="PlayerChaseTimer" type="Timer" parent="." index="4"]
wait_time = 3.0
one_shot = true

[node name="FloorFront" type="RayCast2D" parent="Senses" index="0"]
position = Vector2( 11, 16 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="WallFront" type="RayCast2D" parent="Senses" index="1"]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="PlayerDetection" type="Area2D" parent="Senses" index="2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Senses/PlayerDetection" index="0"]
position = Vector2( 60, 6 )
shape = SubResource( 5 )

[node name="HitBox" parent="." index="6" instance=ExtResource( 6 )]
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 6 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="HurtBox" parent="." index="7"]
collision_layer = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 6 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="animation_finished"]
[connection signal="body_entered" from="Senses/PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]

[editable path="HitBox"]
[editable path="HurtBox"]
